Fix details flickering in details

--- a/src/app/details/details.component.css
+++ b/src/app/details/details.component.css
@@ -20,6 +20,12 @@
     height: 80px;
     border-radius: 50%;
     border: 1px solid #D8DDE1;
-    margin: 10px 10px 0 15px;
     display: inline-block;
+}
+
+.image-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 15px;
 }
